[package]
name = "warp_test"
version = "0.1.0"
authors = ["Calvin Brown <calvinb085@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
prometheus = "0.10.0"
lazy_static = "1.4.0"
quick-error = "2.0.0"