[package]
name = "warp_test"
version = "0.1.0"
authors = ["Calvin Brown <calvinb085@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2.5"
prometheus = "0.10.0"
lazy_static = "1.4.0"
quick-error = "2.0.0"
hashicorp_vault = "1.1.0"
log4rs = "0.13.0"
log = "0.4.11"